Fixed button spacing in Portal unsubscribe popup footer (#19815)
no ref
- The 'Get help' button was only adding margin on the left when accessed
through account management even though it is also shown on the
unsubscribe page accessed via link.

--- a/apps/portal/src/components/pages/EmailSuppressedPage.css
+++ b/apps/portal/src/components/pages/EmailSuppressedPage.css
@@ -24,7 +24,7 @@
     margin-top: 3px;
 }
 
-.accountEmail .gh-email-faq-page-button {
+.gh-email-faq-page-button {
     margin-left: 4px;
 }
 
